# HaskellBook

./: .gitignore
ch02/: FunctionWithWhere.hs  practice.hs  test.hs  waxon.hs
ch03/: area1.hs  area2.hs  exer2.hs  exer4.hs  exer5.hs  print2.hs  print3Broken.hs  reverse.hs
ch04/: abs.hs  exer10.hs  exer11.hs  exer12.hs  exer13.hs
ch05/: determineTheType.hs  sing.hs  typeKwonDo.hs  writeTheFunction.hs
ch06/: eqInstances.hs  givenData.hs  matchTypes.hs  typeCheck.hs  typeKwonDo.hs
ch07/: arith2.hs  casePractice.hs  employee.hs  fillIn.hs  foldBool.hs  guardDuty.hs  penguins.hs  pointFree.hs  registeredUser2.hs  tensDigit.hs
ch08/: dividedBy.hs  mc91.hs  rec1.hs
ch09/: cipher.hs  dataChar.hs  enumFromTo.hs  filter.hs  len.hs  poemLines.hs  stdfuncs.hs  zip.hs
ch10/: database.hs  review.hs  rewriteAsFolds.hs  scans.hs
ch11/: asPatterns.hs  binaryTree.hs  doggies.hs  huttonsRazor.hs  person.hs  phone.hs  programmer.hs  quantum.hs  toomany.hs  vehicles.hs  vigenere.hs
ch12/: either.hs  maybe.hs  natural.hs  strings.hs  treeBuilder.hs  unfolds.hs
ch13/: getchar.hs  palindrome.hs  person.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch15/: anotherMaybe.hs  bullMonoidCheck.hs  madLibs.hs  monEx.hs  optMonoid.hs  semiEx.hs
ch16/: ReplaceExperiment.hs  chapEx3.hs  chapex.hs  ex.hs  functorEx.hs  functorLaws.hs  possibly.hs  sumEx.hs  type_check_fmap_dot_fmap.txt
ch17/: badMonoid.hs  chapEx.hs  combinations.hs  constant.hs  feedback.txt  fixerUpper.hs  listApplicative.hs  lookups.hs  notes.txt  validatePerson.hs  validation.hs  zipList.hs  zipListApplicative.hs
ch18/: badMonad.hs  bind.hs  chapEx.hs  chapFuncs.hs  eitherCoders.hs  eitherMonad.hs  maybeCow.hs
ch20/: chapEx.hs  exercises.hs
ch21/: chapEx.hs  errata.txt  notes.txt  skiFree.hs  tree.hs
ch22/: ask.hs  boopDoop.hs  (+7 more)
ch24/DotLang/: DotLang.cabal  LICENSE  README.md
ch24/DotLang/gallery/: coauthor.dot  philo.dot
ch24/DotLang/src/Data/Semigroup/Reducer/: Orphans.hs
ch24/DotLang/src/DotLang/: Parser.hs  Unparser.hs
ch24/DotLang/src/DotLang/Parser/: Xml.hs
ch24/DotLang/src/DotLang/Util/: Char.hs  Chomped.hs  Combinators.hs
ch24/DotLang/src/DotLang/Xml/: Parser.hs  Unparser.hs
(+39 files in other folders)
