name:                DotLang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/DotLang#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Grigg
maintainer:          tomegrigg@gmail.com
copyright:           2020 Tom Grigg
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , charset
                     , parsers
                     , reducers
                     , trifecta

  exposed-modules:
      Data.Semigroup.Reducer.Orphans
      DotLang.Parser
      DotLang.Unparser
      DotLang.Util.Char
      DotLang.Util.Chomped
      DotLang.Util.Combinators
      DotLang.Xml.Parser
      DotLang.Xml.Unparser

source-repository head
  type:     git
  location: https://github.com/githubuser/DotLang
